Upgrade java version and included some new java 17 features.