@@ -7,4 +7,4 @@ if [[ "$ENV_NAME" ]]; then
   CONFIG_FILE=application-$ENV_NAME.yaml
 fi
 
-java --enable-preview -jar `ls -t target/helloworld-service-*-SNAPSHOT.jar | head -n 1` server src/main/resources/$CONFIG_FILE
+java -jar `ls -t target/helloworld-service-*-SNAPSHOT.jar | head -n 1` server src/main/resources/$CONFIG_FILE
